--- a/simple_interactive.html
+++ b/simple_interactive.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Simple interactive webpage</title>
+    </head>
+    <body>
+        <h2>Click the button to see what happens:</h2>
+        <p>Hello world!</p>
+        <button onclick="this.innerHTML = 'You clicked me!'">Click me</button>
+    </body>
+</html>
