--- a/simple_interactive.html
+++ b/simple_interactive.html
@@ -4,8 +4,8 @@
         <title>Simple interactive webpage</title>
     </head>
     <body>
-        <h2>Click the button to see what happens:</h2>
+        <h2>Download free ram for free!:</h2>
         <p>Hello world!</p>
-        <button onclick="this.innerHTML = 'You clicked me!'">Click me</button>
+        <button>Click me</button>
     </body>
 </html>
