--- a/simple_interactive.html
+++ b/simple_interactive.html
@@ -6,6 +6,6 @@
     <body>
         <h2>Download free ram for free!:</h2>
         <p>Hello world!</p>
-        <button>Click me</button>
+        <button>lick me 4 ram</button>
     </body>
 </html>
