--- a/simple_interactive.html
+++ b/simple_interactive.html
@@ -9,7 +9,7 @@
         </script>
     </head>
     <body>
-        <h2>Click to download free ram for free!:</h2>
+        <h2>Click to download free ram for free!</h2>
         <p id="message">Hello world!</p>
         <button onclick="changeText()">Click me 4 ram</button>
     </body>
